2003-09-04  Mark Mitchell  <mark@codesourcery.com>

	Revert this patch:
	* class.c (include_empty_classes): Correct logic for ABI version 1.

2003-09-03  Mark Mitchell  <mark@codesourcery.com>

	PR c++/12053
	* class.c (include_empty_classes): Correct logic for ABI version 1.

2003-09-01  Mark Mitchell  <mark@codesourcery.com>

	PR c++/12114
	* cp-tree.h (initialize_reference): Change prototype.
	* call.c (initialize_reference): Add cleanup parameter.
	* decl.c (grok_reference_init): Likewise.
	(check_initializer): Likewise.
	(cp_finish_decl): Insert a CLEANUP_STMT if necessary.
	(duplicate_decls): When replacing an anticipated builtin, do not
	honor TREE_NOTHROW.
	* typeck.c (convert_for_initialization): Correct call to
	initialize_reference.

2003-08-29  Mark Mitchell  <mark@codesourcery.com>

	PR c++/11928
	* search.c (add_conversions): Avoid adding two conversion
	operators for the same type.

2003-08-20  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* cp-tree.h (build_function_call_real): Remove unused parameter.
	* typeck.c (build_function_call_real): Likewise.  Caller changed.
	* decl.c (binding_table_reverse_maybe_remap): Initialize variable.

2003-08-19  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	PR c++/5293
	* call.c (initialize_reference): Improve diagnostic.

2003-08-11  Aldy Hernandez  <aldyh@redhat.com>

	* call.c (standard_conversion): Opaque pointers interconvert.

	* testsuite/g++.dg/other/opaque-3.C: New.

2003-08-07  Aldy Hernandez  <aldyh@redhat.com>

	* Make-lang.in (cp/call.o): Add dependency for target.h.

	* call.c (standard_conversion): Support opaque types.
	Include target.h.
	(strip_top_quals): Use cp_build_qualified_type instead of
	TYPE_MAIN_VARIANT.

	* typeck.c (convert_for_assignment): Support opaque types.

	* testsuite/g++.dg/other/opaque-1.C: New.

	* testsuite/g++.dg/other/opaque-2.C: New.

2003-08-06  Aldy Hernandez  <aldyh@redhat.com>

	* decl.c (grokparms): Use cp_build_qualified_type instead
	TYPE_MAIN_VARIANT.
